--- a/logger/Dockerfile.logger
+++ b/logger/Dockerfile.logger
@@ -2,7 +2,7 @@
 FROM golang:1.23-alpine3.21 AS builder
 WORKDIR /app
 COPY . .
-RUN go build -o main cmd/main.go
+RUN go build -o main server/cmd/main.go
 
 #Run stage
 FROM golang:1.23-alpine3.21
